--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <button class="btn btn-primary">VAIKEHU</button>
+    <button class="btn btn-success">VAIKEHU</button>
 
     <div id="root"></div>
   </body>
